--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "date-format": "^4.0.14",
+    "dateformat": "^5.0.3",
+    "html-react-parser": "^5.1.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
