--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "connect-pg-simple": "^9.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-flash": "^0.0.2",
