loader & cloud db

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-DB_USER = postgres
-DB_PASSWORD = 12345
+DB_USER = default
+DB_PASSWORD = 8fLIZhW5UnFz
+POSTGRES_URL="postgres://default:8fLIZhW5UnFz@ep-white-mud-a4y8v1i9-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_HOST="ep-white-mud-a4y8v1i9-pooler.us-east-1.aws.neon.tech"
